<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gobi_desert_dunes">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/welcome_to_my_rock_game"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textSize="25sp" />


    <LinearLayout
        android:id="@+id/menuButtons_layout"
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"

        >


<!--
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/material_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:switchTextAppearance="Settings"
            android:background="@color/material_dynamic_secondary50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
-->
        <Switch
            android:id="@+id/SensorsSwitch"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/sensors"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="bottom"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:padding="10dp"
           />



        <Switch
            android:id="@+id/SpeedSwitch"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:gravity="bottom"
            android:text="@string/speed"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            tools:ignore="UseSwitchCompatOrMaterialXml"


        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signName_layout"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:layout_marginVertical="100dp"
        >
        <EditText
            android:id="@+id/inputText_User_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name_here"
            android:inputType="text"
            android:textColorHint="@color/black"


            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/play_layout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Play"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginHorizontal="150dp"

        />





            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/highscore_layout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Highscore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/highscores_list"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="70dp"
/>

    </LinearLayout>
</RelativeLayout>